--- a/test100.html
+++ b/test100.html
@@ -3,15 +3,15 @@
     <head>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-        <script type="text/javascript" src="javascripts/TimeCircles.js"></script>
-        <script type="text/javascript" src="javascripts/123.js"></script>
-        <link rel="stylesheet" href="javascripts/TimeCircles.css" />
+        <script type="text/javascript" src="js/TimeCircles.js"></script>
+        <script type="text/javascript" src="js/123.js"></script>
+        <link rel="stylesheet" href="css/TimeCircles.css" />
     </head>
     <body>
         <div class="container">
             <button class="btn btn-success stopTimer" id="setbtn">Set Timer</button>
             <!--><h2>Counting down 15 minutes (900 seconds)</h2><!-->
-            <div id="CountDownTimer" data-timer="100" style="width: 1000px; height: 250px;"></div>
+            <div id="CountDownTimer" data-timer="900" style="width: 1000px; height: 250px;"></div>
             <button class="btn btn-success startTimer">Start Timer</button>
             <button class="btn btn-danger stopTimer">Stop Timer</button>
             
