--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> 
     <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script> 
 
-   <!-- <link href="css/WortTimer.css" rel="stylesheet"> -->
+    <link href="css/WortTimer.css" rel="stylesheet">
     <script src="js/WortTimer.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
    
