a preliminary functional time input page with timer

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
      <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <script type="text/javascript" src="js/TimeCircles.js"></script>
-    <script type="text/javascript" src="js/123.js"></script>
-    <link rel="stylesheet" href="css/TimeCircles.css" />
+    <!-- <script type="text/javascript" src="js/123.js"></script> -->
+    <!-- <link rel="stylesheet" href="css/TimeCircles.css" /> -->
 
     <title>Wort Timer</title>
 
@@ -50,7 +50,7 @@
                         <h1 class="brand-heading">Wort Timer</h1>
                         <p class="intro-text"></p>
                         <div class="page-scroll">
-                            <a href="#timer" id="startbtn" class="btn btn-circle">
+                            <a href="#about" id="startbtn" class="btn btn-circle">
                                 <i class="fa fa-angle-double-down animated"></i>
                             </a>
                         </div>
@@ -132,8 +132,19 @@
 			</div>
         </div>
     </div>
+
+    <!-- Input Page -->
+    <div data-role="page" id="timeInput">
+        <div data-role="header" data-theme="b">
+            <h1> Wort Timer </h1> 
+        </div>
+        <div data-role="content">
+            Hello
+        </div>
+
+    </div>
     
-    <!-- Testing page -->
+    <!-- Testing Page -->
     <div data-role="page" id="testing">
         <div data-role="content" class="testing-content">
             This page is for testing.
