--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 		
         <div data-role="content">
             <div data-role="fieldcontain">
-                <label for="firstPhase">First Phase (sec): </label>      
+                <label for="firstPhase">Steep Time (sec): </label>      
                 <input id="firstPhase" name="firstPhase" type="text"/>
             </div>
             <div data-role="fieldcontain">
-                <label for="secondPhase">Second Phase (sec): </label>      
+                <label for="secondPhase">Total Boil Time (sec): </label>      
                 <input id="secondPhase" name="secondPhase" type="text"/>
             </div>
             <div data-role="fieldcontain">
-                <label for="numIntervals">Number of Intervals</label>      
+                <label for="numIntervals">Number of Hops intervals</label>      
                 <input id="numIntervals" name="numIntervals" type="text"/>
             </div> 
             <div data-role="fieldcontain">     
