--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 		
         <div data-role="content">
-            <div> Welcome to the Wort Timer App! Enter your recipe times below!</div>
+            <h2> Welcome to the Wort Timer App! Enter your recipe times below!</h2>
             <div data-role="fieldcontain">
                 <label for="firstPhase">Steep Time (sec): </label>      
                 <input id="firstPhase" name="firstPhase" type="text"/>
