--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1> Wort Timer </h1> 
         </div>
 		
-        <div data-role="content">
+        <div data-role="content" class="content">
             <h2> Welcome to the Wort Timer App! Enter your recipe times below!</h2>
             <div data-role="fieldcontain">
                 <label for="firstPhase">Steep Time (sec): </label>      
