--- a/index.html
+++ b/index.html
@@ -26,11 +26,23 @@
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
     <script type="text/JavaScript" src="js/parse.js"></script>
 
-    <!-- Wort Timer files -->
-    <script src="js/WortTimer.js" type="text/javascript"></script>
+    <!-- Wort Timer JS files -->
+    <script src="js/WortTimer.js"></script>
 	<link href="css/WortTimer.css" rel="stylesheet">
-    <script src="js/TimeCircles.js" type="text/javascript"></script>
-    <link href="css/TimeCircles.css" rel="stylesheet" />
+    <script type="text/javascript" src="js/TimeCircles.js"></script>
+    <link rel="stylesheet" href="css/TimeCircles.css" />
+    <style type="text/css">
+     #CountDownTimer2 {
+        position:absolute;
+        top: 60%;
+        left: 30%;
+        width:0em;
+        height:18em;
+        margin-top: -9em; /*set to a negative number 1/2 of your height*/
+        margin-left: 8em; /*set to a negative number 1/2 of your width*/
+        border: 0px solid #ccc;
+        }
+    </style>
 </head>
 
 <body>
@@ -42,7 +54,7 @@
         </div>
 		
         <div data-role="content" class="content">
-            <h2> Welcome to the Wort Timer App! Enter your recipe times below!</h2>
+            <h3> Welcome to the Wort Timer App! Enter your recipe times below!</h3>
             <div data-role="fieldcontain">
                 <label for="firstPhase">Steep Time (sec): </label>      
                 <input id="firstPhase" name="firstPhase" type="text"/>
@@ -52,7 +64,7 @@
                 <input id="secondPhase" name="secondPhase" type="text"/>
             </div>
             <div data-role="fieldcontain">
-                <label for="numIntervals">Number of Hops intervals</label>      
+                <label for="numIntervals">Number of Hops</label>      
                 <input id="numIntervals" name="numIntervals" type="text"/>
             </div> 
             <div data-role="fieldcontain">     
@@ -65,6 +77,7 @@
         </div>
 		
     </div>
+
 	<!-- Timer Page -->
     <div data-role="page" id="timer">
 	
@@ -73,7 +86,15 @@
         </div>
 	
         <div data-role="content">
-            <div id="CountDownTimer" data-timer="900" style="width: 1000px; height: 250px;"></div>
+            <div>
+                <span id="CountDownTimer" data-timer="900" style="width: 300px; height: 270px;" ></span>
+                <span id="CountDownTimer2" data-timer="900" style="width: 300px;  height: 100px;" ></span>
+            </div> 
+            
+            </br>
+			</br>
+			</br>
+			</br>
             <button class="btn btn-success startTimer">Start Timer</button>
             <button class="btn btn-danger stopTimer">Stop Timer</button>
         </div>
@@ -83,6 +104,7 @@
         </div>
 		
     </div>
+	
 </body>
 
 </html>
