--- a/index_2.html
+++ b/index_2.html
@@ -54,7 +54,7 @@
         </div>
 		
         <div data-role="content" class="content">
-            <h3> Welcome to the Wort Timer App! Enter your recipe times below!</h3>
+            <h3> Welcome to the Wort Timer App! Enter your brewing times below:</h3>
             <div data-role="fieldcontain">
                 <label for="firstPhase">Steep Time (sec): </label>      
                 <input id="firstPhase" name="firstPhase" type="text"/>
