--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <div data-role="fieldcontain">
                 <label for="numIntervals">Number of Hops</label>      
                 <input id="numIntervals" name="numIntervals" type="text"/>
+                <input type="range" name="maxTimeInMinutes" id="maxTimeInMinutes" value="60" min="0" max="150" data-highlight="true" />
             </div> 
             <div data-role="fieldcontain">     
                 <input type="button" id="submitTime" value="Submit" />
@@ -89,8 +90,8 @@
             </div> 
             
             </br>
-			</br>
-			</br>
+			
+			
 			</br>
 			</br>
 			</br>
