--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
       		<option value="five">5</option>
    		</select>
 	    </div>
+	    <div>
+	    	<button type="button">Pick Hops Times</button>
+	    </div>
             <div data-role="fieldcontain">
                 <label for="numIntervals">Number of Hops</label>      
                 <input id="numIntervals" name="numIntervals" type="text"/>
