--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
 	    <div>
 	    	<button type="button">Pick Hops Times</button>
 	    </div>
+	    <div>
+	    	<input type="range" name="hops1" id="hops1" value="0" min="0" max="150" data-highlight="false" />
+	    	<input type="range" name="hops2" id="hops2" value="0" min="0" max="150" data-highlight="false" />
+	    	<input type="range" name="hops3" id="hops3" value="0" min="0" max="150" data-highlight="false" />
+	    	<input type="range" name="hops4" id="hops4" value="0" min="0" max="150" data-highlight="false" />
+	    	<input type="range" name="hops5" id="hops5" value="0" min="0" max="150" data-highlight="false" />
+	    </div>
             <div data-role="fieldcontain">     
                 <input type="button" id="submitTime" value="Submit" />
             </div> 
