fixing syntax error

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 	    	<button id="hopTimes" type="button">Set Hop Times</button>
 	    </div>
 	    <div>
-	    	<input type="range" name="hops1" id="hops1" value="0" min="0" max="150" data-highlight="false" />
-	    	<input type="range" name="hops2" id="hops2" value="0" min="0" max="150" data-highlight="false" />
-	    	<input type="range" name="hops3" id="hops3" value="0" min="0" max="150" data-highlight="false" />
-	    	<input type="range" name="hops4" id="hops4" value="0" min="0" max="150" data-highlight="false" />
-	    	<input type="range" name="hops5" id="hops5" value="0" min="0" max="150" data-highlight="false" />
+	    	<input type="range" name="hop1" id="hop1" value="0" min="0" max="150" data-highlight="false" />
+	    	<input type="range" name="hop2" id="hop2" value="0" min="0" max="150" data-highlight="false" />
+	    	<input type="range" name="hop3" id="hop3" value="0" min="0" max="150" data-highlight="false" />
+	    	<input type="range" name="hop4" id="hop4" value="0" min="0" max="150" data-highlight="false" />
+	    	<input type="range" name="hop5" id="hop5" value="0" min="0" max="150" data-highlight="false" />
 	    </div>
             <div data-role="fieldcontain">     
                 <input type="button" id="submitTime" value="Submit" />
