--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     	</div>
     	
     	<div data-role="content" class="content">
-    		<h1 id="welcome"> Wort Timer </h1></h1>
+    		<h1 id="welcome"> Wort Timer </h1>
     		<input type="button" id="extract" value="Extract Brewing"/>
     	</div>
     	
