--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <div data-role="fieldcontain">
 		<label for="select-choice-1" class="select">Number of Hops:</label>
    		<select name="select-choice-1" id="numHops">
+   		<option value=0>Select # of Hops</option>
       		<option value=1>1</option>
       		<option value=2>2</option>
       		<option value=3>3</option>
