fixing phase names

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
         <div data-role="content" class="content">
             <h1 id="welcome"> Wort Timer</h1>
             <div data-role="fieldcontain">
-                <label for="firstPhase">Steep Time (sec): </label>      
-                <input id="firstPhase" name="firstPhase" type="text"/>
+                <label for="steepTime">Steep Time (sec): </label>      
+                <input id="steepTime" name="steepTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
-                <label for="secondPhase">Total Boil Time (sec): </label>      
-                <input id="secondPhase" name="secondPhase" type="text"/>
+                <label for="boilTime">Total Boil Time (sec): </label>      
+                <input id="boilTime" name="boilTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
 		<label for="select-choice-1" class="select">Number of Hops:</label>
@@ -123,12 +123,12 @@
         <div data-role="content" class="content">
             <h1 id="welcome"> Wort Timer</h1>
             <div data-role="fieldcontain">
-                <label for="firstPhase">Steep Time (sec): </label>      
-                <input id="firstPhase" name="firstPhase" type="text"/>
+                <label for="steepTime">Steep Time (sec): </label>      
+                <input id="steepTime" name="steepTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
-                <label for="secondPhase">Total Boil Time (sec): </label>      
-                <input id="secondPhase" name="secondPhase" type="text"/>
+                <label for="boilTime">Total Boil Time (sec): </label>      
+                <input id="boilTime" name="boilTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
 		<label for="select-choice-1" class="select">Number of Hops:</label>
@@ -169,12 +169,12 @@
         <div data-role="content" class="content">
             <h1 id="welcome"> Wort Timer</h1>
             <div data-role="fieldcontain">
-                <label for="firstPhase">Steep Time (sec): </label>      
-                <input id="firstPhase" name="firstPhase" type="text"/>
+                <label for="steepTime">Steep Time (sec): </label>      
+                <input id="steepTime" name="steepTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
-                <label for="secondPhase">Total Boil Time (sec): </label>      
-                <input id="secondPhase" name="secondPhase" type="text"/>
+                <label for="boilTime">Total Boil Time (sec): </label>      
+                <input id="boilTime" name="boilTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
 		<label for="select-choice-1" class="select">Number of Hops:</label>
