--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div data-role="content" class="content">
             <h1 id="welcome"> Wort Timer</h1>
             <div data-role="fieldcontain">
-                <label for="steepTime">Steep Time (sec): </label>      
+                <label for="steepTime">Mash Wait Time (sec): </label>      
                 <input id="steepTime" name="steepTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
@@ -169,8 +169,12 @@
         <div data-role="content" class="content">
             <h1 id="welcome"> Wort Timer</h1>
             <div data-role="fieldcontain">
-                <label for="steepTime">Steep Time (sec): </label>      
+                <label for="steepTime">Mash Wait Time (sec): </label>      
                 <input id="steepTime" name="steepTime" type="text"/>
+            </div>
+            <div data-role="fieldcontain">
+                <label for="spargingTime">Sparging Time (sec): </label>      
+                <input id="spargingTime" name="steepTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
                 <label for="boilTime">Total Boil Time (sec): </label>      
