adding images updating to display minutes

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
         <div data-role="content" class="content">
             <h1 id="welcome"> Wort Timer</h1>
             <div data-role="fieldcontain">
-                <label for="steepTime">Steep Time (sec): </label>      
+                <label for="steepTime">Steep Time (min): </label>      
                 <input id="steepTime" name="steepTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
-                <label for="boilTime">Total Boil Time (sec): </label>      
+                <label for="boilTime">Total Boil Time (min): </label>      
                 <input id="boilTime" name="boilTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
@@ -123,11 +123,11 @@
         <div data-role="content" class="content">
             <h1 id="welcome"> Wort Timer</h1>
             <div data-role="fieldcontain">
-                <label for="steepTime">Mash Wait Time (sec): </label>      
+                <label for="steepTime">Mash Wait Time (min): </label>      
                 <input id="steepTime" name="steepTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
-                <label for="boilTime">Total Boil Time (sec): </label>      
+                <label for="boilTime">Total Boil Time (min): </label>      
                 <input id="boilTime" name="boilTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
@@ -169,15 +169,15 @@
         <div data-role="content" class="content">
             <h1 id="welcome"> Wort Timer</h1>
             <div data-role="fieldcontain">
-                <label for="steepTime">Mash Wait Time (sec): </label>      
+                <label for="steepTime">Mash Wait Time (min): </label>      
                 <input id="steepTime" name="steepTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
-                <label for="spargingTime">Sparging Time (sec): </label>      
+                <label for="spargingTime">Sparging Time (min): </label>      
                 <input id="spargingTime" name="steepTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
-                <label for="boilTime">Total Boil Time (sec): </label>      
+                <label for="boilTime">Total Boil Time (min): </label>      
                 <input id="boilTime" name="boilTime" type="text"/>
             </div>
             <div data-role="fieldcontain">
