--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
         margin-left: 8em; /*set to a negative number 1/2 of your width*/
         border: 0px solid #ccc;
         }
+
+        html, body
+        {
+            padding: 0;
+            margin: 0;
+            height: 100%;
+            width: 100%;
+        }
     </style>
 </head>
 
@@ -68,7 +76,7 @@
     </div>
     
     <!-- Extract Input Page -->
-    <div data-role="page" id="extractInput">
+    <div data-role="page" id="extractInput" data-cache="false">
         
 		<div data-role="header" data-theme="b">
             <h1> Wort Timer </h1> 
@@ -95,19 +103,17 @@
       		<option value=5>5</option>
    		</select>
 	    </div>
-	    <div>
-	    	<button id="hopTimes" type="button">Set Hop Times</button>
-	    </div>
-	    <div>
-	    	<input type="range" name="hop1" id="hop1" value="0" min="0" max="150" data-highlight="false" />
-	    	<input type="range" name="hop2" id="hop2" value="0" min="0" max="150" data-highlight="false" />
-	    	<input type="range" name="hop3" id="hop3" value="0" min="0" max="150" data-highlight="false" />
-	    	<input type="range" name="hop4" id="hop4" value="0" min="0" max="150" data-highlight="false" />
-	    	<input type="range" name="hop5" id="hop5" value="0" min="0" max="150" data-highlight="false" />
-	    </div>
-            <div data-role="fieldcontain">     
-                <input type="button" id="submitTime" value="Submit" />
-            </div> 
+        <div class="priceRangeInfo">
+            <label for="buying_slider_min" id="hops_at">Hops @ </label>
+            <input type="range" name="buying_slider_1" id="buying_slider_1" slider="1" class="BuyingSlider" value="100" min="0" max="100"/>
+            <input type="range" name="buying_slider_2" id="buying_slider_2" slider="2" class="BuyingSlider" value="100" min="0" max="100"/>
+            <input type="range" name="buying_slider_3" id="buying_slider_3" slider="3" class="BuyingSlider" value="100" min="0" max="100"/>
+            <input type="range" name="buying_slider_4" id="buying_slider_4" slider="4" class="BuyingSlider" value="100" min="0" max="100"/>
+            <input type="range" name="buying_slider_5" id="buying_slider_5" slider="5" class="BuyingSlider" value="100" min="0" max="100"/>
+        </div>
+        <div data-role="fieldcontain">     
+            <input type="button" id="submitTime" value="Submit" />
+        </div> 
         </div>
 		
     </div>
