--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
             <h1 id="welcome"> Wort Timer</h1>
             <div data-role="fieldcontain">
                 <label for="steepTime">Steep Time (min): </label>      
-                <input id="steepTime" name="steepTime" type="text"/>
+                <input id="steepTime" name="steepTime" value="30" type="text"/>
             </div>
             <div data-role="fieldcontain">
                 <label for="boilTime">Total Boil Time (min): </label>      
-                <input id="boilTime" name="boilTime" type="text"/>
+                <input id="boilTime" name="boilTime" value="60" type="text"/>
             </div>
             <div data-role="fieldcontain">
 		<label for="select-choice-1" class="select">Number of Hops:</label>
