--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	
 	<!-- Icons -->
-	<link rel="shortcut icon" href="/favicon.ico" >
+	<link rel="shortcut icon" href="img/favicon.ico" >
 	
 	<!-- Fonts -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
