adding sound notifications

--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
 
 	<!-- Timer Page -->
     <div data-role="page" id="timer">
+		
+		<audio controls id="soundHandle" style="display: none;">
+			<source src="sound/notification.ogg" type="audio/mpeg">
+		</audio>
 	
 		<div data-role="header" data-theme="b">
             <h1> Wort Timer </h1> 
