changing header on input page

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div data-role="page" id="inputPage" data-cache="false">
         
 		<div data-role="header" data-theme="b">
-            <h1> Wort Timer </h1> 
+            <h1> Brew Times </h1> 
         </div>
 		
         <div data-role="content" class="content">
