fixing header on input page

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
     <div data-role="page" id="inputPage" data-cache="false">
         
 		<div data-role="header" data-theme="b">
-            <h1> Brew Times </h1> 
+            <h1> Wort Timer </h1> 
         </div>
 		
         <div data-role="content" class="content">
-            <h1 id="welcome"> Wort Timer</h1>
+            <h1 id="welcome">Brew Times</h1>
             <div data-role="fieldcontain" id="firstPhaseForm">
                 <label for="steepTime" id="firstPhase">Steep Time (min): </label>      
                 <input id="steepTime" name="steepTime" value="30" type="text"/>
