--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <h1> Enjoy! </h1>
             <br>
             <a href="#popupForm" data-icon="heart" data-rel="popup" data-role="button"> Save it! </a>
-            <a href="index.html" data-icon="home" data-role="button" id="back_home"> Return to Home </a>
+            <a href="" data-icon="home" data-role="button" id="back_home"> Return to Home </a>
             <div data-role="popup" id="popupForm" data-position-to="window" class="ui-content">
                 <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
                 <div data-role="fieldcontain">
