adding info for User ID

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			</div>
             </br></br>
             <div id="userid">
-                <label for="userid_val" style="font-weight:bold;"> Please input your user id:</label>
+                <a id="IDInfo" data-role="button" data-icon="info" data-iconpos="right">Enter User ID:</a>
                 <input type="text" value="" id="userid_val"/>
                 <input type="button" value="Submit" id="submit_userid" />
             </div>
