modifying design of Completed page

--- a/index.html
+++ b/index.html
@@ -165,17 +165,18 @@
         </div>
     </div>
 
-    <div data-role="page" id="completed">
+    <!-- Completed Page -->
+	<div data-role="page" id="completed">
         <div data-role="header" data-theme="b">
             <h1>Wort Timer</h1> 
         </div>
         <div data-role="content">
-            <br>
-            <h1> You are done brewing! </h1>
-            <br>
-            <h1> Enjoy! </h1>
-            <br>
-            <a href="#popupForm" data-icon="heart" data-rel="popup" data-role="button"> Save it! </a>
+            </br> </br> </br> </br> </br> </br>
+            <h4> You are done brewing! </h4>
+            </br>
+			</br>
+			</br>
+			<a href="#popupForm" data-icon="heart" data-rel="popup" data-role="button"> Save it! </a>
             <a href="" data-icon="home" data-role="button" id="back_home"> Return to Home </a>
             <div data-role="popup" id="popupForm" data-position-to="window" class="ui-content">
                 <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
