added constraint on slider; added title on different time phases; cleaned the js code

--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 	    </div>
         <div class="priceRangeInfo">
             <label for="buying_slider_min" id="hops_at">Hops @ </label>
-            <input type="range" name="buying_slider_1" id="buying_slider_1" slider="1" class="BuyingSlider" value="100" min="0" max="100"/>
-            <input type="range" name="buying_slider_2" id="buying_slider_2" slider="2" class="BuyingSlider" value="100" min="0" max="100"/>
-            <input type="range" name="buying_slider_3" id="buying_slider_3" slider="3" class="BuyingSlider" value="100" min="0" max="100"/>
-            <input type="range" name="buying_slider_4" id="buying_slider_4" slider="4" class="BuyingSlider" value="100" min="0" max="100"/>
+            <input type="range" name="buying_slider_1" id="buying_slider_1" slider="1" class="BuyingSlider" value="20" min="0" max="100"/>
+            <input type="range" name="buying_slider_2" id="buying_slider_2" slider="2" class="BuyingSlider" value="40" min="0" max="100"/>
+            <input type="range" name="buying_slider_3" id="buying_slider_3" slider="3" class="BuyingSlider" value="60" min="0" max="100"/>
+            <input type="range" name="buying_slider_4" id="buying_slider_4" slider="4" class="BuyingSlider" value="80" min="0" max="100"/>
             <input type="range" name="buying_slider_5" id="buying_slider_5" slider="5" class="BuyingSlider" value="100" min="0" max="100"/>
         </div>
         <div data-role="fieldcontain">     
@@ -149,7 +149,7 @@
 			<source src="sound/notification.ogg" type="audio/mpeg">
 		</audio>
 		<div data-role="header" data-theme="b">
-            <h1> Wort Timer </h1> 
+            <h1 id="timer_header"> Wort Timer </h1> 
         </div>
 	
         <div data-role="content">
