UI updates making pages look uniform

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 	
         <div data-role="content">
             <div id="timersGrouped">
-                <span id="CountDownTimer" data-timer="900" style="width: 300px; height: 270px; display: inline" ></span>
-                <span id="CountDownTimer2" data-timer="900" style="width: 300px;  height: 100px; display: inline" ></span>
+                <span id="CountDownTimer" data-timer="900" style="color: #fff; text-shadow: none; width: 300px; height: 270px; display: inline" ></span>
+                <span id="CountDownTimer2" data-timer="900" style="color: #fff; text-shadow: none; width: 300px;  height: 100px; display: inline" ></span>
             </div> 
             
             
@@ -176,7 +176,7 @@
         </div>
         <div data-role="content">
             </br> </br> </br> </br> </br> </br>
-            <h4> You are done brewing! </h4>
+            <h4 id="donemsg"> You are done brewing! </h4>
             </br>
 			</br>
 			</br>
